[package]
name = "gbrowse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip="debuginfo"

[dependencies]
eframe = { version = "0.19", features = ["wgpu"] }
gmi = "0.2"
url = "2.3"
argh = "0.1"